# pgargs

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pgargs.py  pyproject.toml  test_args.py  test_cols.py  test_integration.py
.github/workflows/: publish.yml
src/pgargs/: __init__.py
src/tests/: integration_tests.py  test_cols.py  test_integration.py
